--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,17 +11,66 @@ $gray: #212529;
   font-family: $sans-serif;
 }
 
+.page__flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.page .page__text--normal-weight {
+  font-weight: 300;
+}
+
+.page .page_section--center-text {
+  text-align: center;
+}
+
 .page__button {
   background-color: $orange;
   border-color: $orange;
   border-radius: 50px;
   border-width: 0;
   text-transform: uppercase;
+  line-height: 1.5;
   padding: 1rem 2rem;
   color: white;
   font-style: $sans-serif;
   font-weight: bold;
   cursor: pointer;
+}
+
+.page__button--white-background {
+  background-color: white;
+}
+
+.page .page__text--gray {
+  color: $gray;
+}
+
+.page .page__p--extra-margin {
+  margin-bottom: 3rem;
+}
+
+.page__p {
+  font-size: 1rem;
+  color: rgba(255,255,255,0.7);
+  font-family: $serif;
+  font-weight: 400;
+  line-height: 1.5;
+  margin: 0 0 1rem 0;
+}
+
+.page__title {
+  font-size: 2rem;
+  margin: 0 0 0.5rem 0;
+}
+
+.page .page__title--extra-margin {
+  margin: 0 0 1.5rem 0;
+}
+
+.page .page__p--margin {
+  margin-bottom: 2rem;
 }
 
 .nav {
@@ -61,7 +110,6 @@ $gray: #212529;
 .nav__ul {
   list-style-type: none;
   display: block;
-  color: $gray;
   background-color: white;
   font-size: 0.9rem;
   font-weight: bold;
@@ -95,20 +143,63 @@ $gray: #212529;
 }
 
 .header {
-  text-align: center;
   background: center no-repeat url('../assets/header.jpg');
   background-size: cover;
   padding: 10rem 0 calc(10rem - 55px) 0;
 }
 
-.page__title {
-  font-size: 2rem;
+.section {
+  padding: 8rem 0;
 }
 
-.header__p {
-  font-size : 1.15rem;
-  font-weight: 300;
-  color: rgba(255,255,255,0.7);
+.section--orange-background {
+  background-color: $orange;
+  margin: 0;
+}
+
+.section__icon {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  margin-bottom: 1rem;
+}
+
+.section__icon--phone{
+  background: center 0px no-repeat url('../assets/phone.svg');
+  background-size: cover;
+}
+
+.section__icon--email{
+  background: center 0px no-repeat url('../assets/email.svg');
+  background-size: cover;
+  text-decoration: none;
+  color: $gray;
+}
+
+.section__email {
+  display: block;
+  margin: 0 auto;
+  text-decoration: none;
+  color: $orange;
   font-family: $serif;
 }
 
+.hr {
+  max-width: 50px;
+  border-style: solid;
+  color: $orange;
+  border-width: 3px 0 0 0;
+  margin: 1.5rem auto;
+}
+
+.section__hr--white {
+  color: white;
+}
+
+.section--gray-background {
+  background-color: $gray;
+}
+
+.header__hr--extra-margin {
+  margin: 1.9rem auto;
+}
