--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'normalize';
 @import 'sizing';
+@import 'node_modules/perfundo/scss/with-icons.scss';
 
 $sans-serif: 'Open Sans',sans-serif;
 $serif: 'Merriweather',serif;
@@ -7,6 +8,11 @@ $orange: #f05f40;
 $orange-9: #f06040e3;
 $gray: #212529;
 $light-gray : #6c757d;
+
+.perfundo__link {
+  display: inline-block;
+  position: relative;
+}
 
 .page {
   color: white;
@@ -308,7 +314,7 @@ $light-gray : #6c757d;
 .page__flex-div--width {
   line-height: 0;
   max-width: 100%;
-  position: relative;
+  // position: relative;
 }
 
 .service-box {
@@ -319,6 +325,7 @@ $light-gray : #6c757d;
 @media (min-width: 576px) {
   .page__flex-container--row {
     flex-direction: row;
+    justify-content: center;
   }
 
   .page__flex-div--width {
@@ -329,23 +336,39 @@ $light-gray : #6c757d;
 
 @media (min-width: 768px) {
   .page .page__container-responsive {
-    max-width: 750px;
+    max-width: 720px;
+  }
+
+  .service-box {
+    max-width: 50%;
+    padding: 0 0.9rem;
   }
 }
 
 
 @media (min-width: 992px) {
   .page .page__container-responsive {
-    max-width: 970px;
+    max-width: 960px;
   }
+
+  .page .page__container-responsive--align-start {
+    align-items: flex-start;
+
+  }
+
   .page__flex-div--width {
     max-width: 33.33%;
+  }
+
+  .service-box {
+    max-width: 25%;
+    padding: 0 0.9rem;
   }
 }
 
 
 @media (min-width: 1200px) {
   .page .page__container-responsive {
-    max-width: 1170px;
+    max-width: 1140px;
   }
 }
